# static_testing

./: .travis.yml  LICENSE  README.md
libstatic_testing/: CMakeLists.txt
libstatic_testing/include/static_testing/: static_testing.hpp
libstatic_testing/test/: CMakeLists.txt
libstatic_testing/test/src/: main.cpp  test_assert_eq.cpp  test_assert_false.cpp  test_assert_ge.cpp  test_assert_gt.cpp  test_assert_le.cpp  test_assert_lt.cpp  test_assert_ne.cpp  test_assert_true.cpp
